--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    background-color: rgb(130, 161, 69);
+}
+
+h1{
+    margin-top: 20px;
 }
 
 .ingredients-list{
